--- a/demo/themerollered.html
+++ b/demo/themerollered.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-<title>jQuery validation plug-in - ThemeRolldered demo</title>
-
-<link rel="stylesheet" type="text/css" media="screen" href="http://code.jquery.com/ui/jquery-ui-git.css" />
-
-<style type="text/css">
-body { font-size: 62.5%; }
-label { display: inline-block; width: 100px; }
-legend { padding: 0.5em; }
-fieldset fieldset label { display: block; }
-#commentForm { width: 500px; }
-#commentForm label { width: 250px; }
-#commentForm label.error, #commentForm button.submit { margin-left: 253px; }
-#signupForm { width: 670px; }
-#signupForm label.error {
-	margin-left: 10px;
-	width: auto;
-	display: inline;
-}
-#newsletter_topics label.error {
-	display: none;
-	margin-left: 103px;
-}
-</style>
-
+	<meta charset="utf-8">
+	<title>jQuery validation plug-in - ThemeRolldered demo</title>
+	<link rel="stylesheet" media="screen" href="http://code.jquery.com/ui/jquery-ui-git.css" />
+	<style>
+	body {
+		font-size: 62.5%;
+	}
+	label {
+		display: inline-block;
+		width: 100px;
+	}
+	legend {
+		padding: 0.5em;
+	}
+	fieldset fieldset label {
+		display: block;
+	}
+	#commentForm {
+		width: 500px;
+	}
+	#commentForm label {
+		width: 250px;
+	}
+	#commentForm label.error, #commentForm button.submit {
+		margin-left: 253px;
+	}
+	#signupForm {
+		width: 670px;
+	}
+	#signupForm label.error {
+		margin-left: 10px;
+		width: auto;
+		display: inline;
+	}
+	#newsletter_topics label.error {
+		display: none;
+		margin-left: 103px;
+	}
+	</style>
 </head>
 <body>
-
 <form class="cmxform" id="commentForm" method="get" action="">
 	<fieldset class="ui-widget ui-widget-content ui-corner-all">
 		<legend class="ui-widget ui-widget-header ui-corner-all">Please provide your name, email address (won't be published) and a comment</legend>
 		<p>
 			<label for="cname">Name (required, at least 2 characters)</label>
 			<input id="cname" name="name" class="ui-widget-content" minlength="2" required type="text" />
-		<p>
-			<label for="cemail">E-Mail (required)</label>
-			<input id="cemail" name="email" class="ui-widget-content" type="email" required />
-		</p>
-		<p>
-			<label for="curl">URL (optional)</label>
-			<input id="curl" name="url" class="ui-widget-content" value="" type="url" />
-		</p>
-		<p>
-			<label for="ccomment">Your comment (required)</label>
-			<textarea id="ccomment" name="comment" class="ui-widget-content" required></textarea>
-		</p>
-		<p>
-			<button class="submit" type="submit">Submit</button>
-		</p>
+			<p>
+				<label for="cemail">E-Mail (required)</label>
+				<input id="cemail" name="email" class="ui-widget-content" type="email" required />
+			</p>
+			<p>
+				<label for="curl">URL (optional)</label>
+				<input id="curl" name="url" class="ui-widget-content" value="" type="url" />
+			</p>
+			<p>
+				<label for="ccomment">Your comment (required)</label>
+				<textarea id="ccomment" name="comment" class="ui-widget-content" required></textarea>
+			</p>
+			<p>
+				<button class="submit" type="submit">Submit</button>
+			</p>
 	</fieldset>
 </form>
-
 <form class="cmxform" id="signupForm" method="get" action="">
 	<fieldset class="ui-widget ui-widget-content ui-corner-all">
 		<legend class="ui-widget ui-widget-header ui-corner-all">Validating a complete form</legend>
@@ -91,16 +103,13 @@ fieldset fieldset label { display: block; }
 		<fieldset id="newsletter_topics" class="ui-widget-content ui-corner-all">
 			<legend class="ui-widget-header ui-corner-all">Topics (select at least two) - note: would be hidden when newsletter isn't selected, but is visible here for the demo</legend>
 			<label for="topic_marketflash">
-				<input type="checkbox" id="topic_marketflash" value="marketflash" name="topic" />
-				Marketflash
+				<input type="checkbox" id="topic_marketflash" value="marketflash" name="topic" />Marketflash
 			</label>
 			<label for="topic_fuzz">
-				<input type="checkbox" id="topic_fuzz" value="fuzz" name="topic" />
-				Latest fuzz
+				<input type="checkbox" id="topic_fuzz" value="fuzz" name="topic" />Latest fuzz
 			</label>
 			<label for="topic_digester">
-				<input type="checkbox" id="topic_digester" value="digester" name="topic" />
-				Mailing list digester
+				<input type="checkbox" id="topic_digester" value="digester" name="topic" />Mailing list digester
 			</label>
 			<label for="topic" class="error">Please select at least two topics you'd like to receive.</label>
 		</fieldset>
@@ -109,25 +118,30 @@ fieldset fieldset label { display: block; }
 		</p>
 	</fieldset>
 </form>
-
-<script src="../lib/jquery-1.6.1.js" type="text/javascript"></script>
-<script src="../dist/jquery.validate.js" type="text/javascript"></script>
+<script src="../lib/jquery-1.6.1.js"></script>
+<script src="../dist/jquery.validate.js"></script>
 <script src="http://code.jquery.com/ui/jquery-ui-git.js"></script>
-<script type="text/javascript">
+<script>
 $.validator.setDefaults({
-	submitHandler: function() { alert("submitted!"); },
+	submitHandler: function() {
+		alert("submitted!");
+	},
 	showErrors: function(map, list) {
 		// there's probably a way to simplify this
 		var focussed = document.activeElement;
 		if (focussed && $(focussed).is("input, textarea")) {
-			$(this.currentForm).tooltip("close", { currentTarget: focussed }, true)
+			$(this.currentForm).tooltip("close", {
+				currentTarget: focussed
+			}, true)
 		}
 		this.currentElements.removeAttr("title").removeClass("ui-state-highlight");
 		$.each(list, function(index, error) {
 			$(error.element).attr("title", error.message).addClass("ui-state-highlight");
 		});
 		if (focussed && $(focussed).is("input, textarea")) {
-			$(this.currentForm).tooltip("open", { target: focussed });
+			$(this.currentForm).tooltip("open", {
+				target: focussed
+			});
 		}
 	}
 });
@@ -195,7 +209,7 @@ $.validator.setDefaults({
 	$("#username").focus(function() {
 		var firstname = $("#firstname").val();
 		var lastname = $("#lastname").val();
-		if(firstname && lastname && !this.value) {
+		if (firstname && lastname && !this.value) {
 			this.value = firstname + "." + lastname;
 		}
 	});
@@ -220,10 +234,10 @@ $.validator.setDefaults({
 <script src="http://jqueryui.com/themeroller/themeswitchertool/"></script>
 <script>
 $.fn.themeswitcher && $('<div/>').css({
-		position: "absolute",
-		right: 10,
-		top: 10
-	}).appendTo(document.body).themeswitcher();
+	position: "absolute",
+	right: 10,
+	top: 10
+}).appendTo(document.body).themeswitcher();
 </script>
 </body>
 </html>
