--- a/demo/tinymce/index.html
+++ b/demo/tinymce/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html lang="en">
 <head>
-<title>jQuery Validation plugin: integration with TinyMCE</title>
-
-<script type="text/javascript" src="../../lib/jquery.js"></script>
-<script type="text/javascript" src="../../dist/jquery.validate.js"></script>
-<script type="text/javascript" src="tiny_mce.js"></script>
-<script type="text/javascript">
+	<meta charset="utf-8">
+	<title>jQuery Validation plugin: integration with TinyMCE</title>
+	<script src="../../lib/jquery.js"></script>
+	<script src="../../dist/jquery.validate.js"></script>
+	<script src="tiny_mce.js"></script>
+	<script>
 	tinyMCE.init({
-		mode : "textareas",
-		theme : "simple",
+		mode: "textareas",
+		theme: "simple",
 		// update validation status on change
 		onchange_callback: function(editor) {
 			tinyMCE.triggerSave();
@@ -37,7 +37,7 @@
 		});
 		validator.focusInvalid = function() {
 			// put focus on tinymce on submit validation
-			if( this.settings.focusInvalid ) {
+			if (this.settings.focusInvalid) {
 				try {
 					var toFocus = $(this.findLastActive() || this.errorList.length && this.errorList[0].element || []);
 					if (toFocus.is("textarea")) {
@@ -45,32 +45,25 @@
 					} else {
 						toFocus.filter(":visible").focus();
 					}
-				} catch(e) {
+				} catch (e) {
 					// ignore IE throwing errors when focusing hidden elements
 				}
 			}
 		}
 	})
-</script>
-<!-- /TinyMCE -->
-
+	</script>
+	<!-- /TinyMCE -->
 </head>
 <body>
-
 <form id="myform" action="">
 	<h3>TinyMCE and Validation Plugin integration example</h3>
-
 	<label>Some other field</label>
 	<input name="title" />
-
 	<br/>
-	
 	<label>Some richt text</label>
 	<textarea id="content" name="content" rows="15" cols="80" style="width: 80%"></textarea>
-
 	<br />
 	<input type="submit" name="save" value="Submit" />
 </form>
-
 </body>
 </html>
