--- a/test/number.html
+++ b/test/number.html
@@ -3,25 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<title>Test for jQuery validate() plugin</title>
-
-	<script src="jquery.js" type="text/javascript"></script>
+	<script src="jquery.js"></script>
 	<script src="../dist/jquery.validate.js"></script>
-
-	<script type="text/javascript">
+	<script>
 	$(document).ready(function() {
 		$('#numberForm').validate({
 			submitHandler: function() {
-				alert( "All valid" );
+				alert("All valid");
 			}
 		});
 	});
 	</script>
-
-	<style type="text/css">
-	#numberForm { width: 500px; }
-	#numberForm label { width: 250px; display: block; float: left; }
-	#numberForm label.error, #commentForm input.submit { margin-left: 253px; }
-	#numberForm label.error { background-color: red; }
+	<style>
+	#numberForm {
+		width: 500px;
+	}
+	#numberForm label {
+		width: 250px;
+		display: block;
+		float: left;
+	}
+	#numberForm label.error, #commentForm input.submit {
+		margin-left: 253px;
+	}
+	#numberForm label.error {
+		background-color: red;
+	}
 	</style>
 </head>
 <body>
@@ -43,6 +50,5 @@
 		</p>
 	</fieldset>
 </form>
-
 </body>
 </html>
